--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@
 
 streamlit>=1.28.0
 opencv-python-headless>=4.8.0
-mediapipe>=0.10.0
+mediapipe==0.10.11
 sign-language-translator>=0.0.8
 scikit-learn>=1.3.0
 numpy>=1.26.0,<2.0
 pandas>=2.0
 scipy>=1.11
-protobuf>=3.20.0
+protobuf==3.20.3
 # Using exact version required by SLT to avoid conflicts
 torch==2.2.1 --index-url https://download.pytorch.org/whl/cpu
 torchvision==0.17.1 --index-url https://download.pytorch.org/whl/cpu
