--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ protobuf==3.20.3
 # Using exact version required by SLT to avoid conflicts
 torch==2.2.1 --index-url https://download.pytorch.org/whl/cpu
 torchvision==0.17.1 --index-url https://download.pytorch.org/whl/cpu
+ultralytics>=8.1.0
+SpeechRecognition>=3.10.0
+PyAudio>=0.2.13
